tests/samples/negative/core/main_export_conflict.ax
module main_export_conflict;

fn main() -> i32 {
    return 0;
}

@name("main")
export c fn c_entry() -> i32 {
    return 0;
}
